--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,13 +33,13 @@ import bg3 from "../assets/images/bg3.svg";
     <h3 class="flex justify-center text-blue-500 text-sm font-bold lg:pt-4 lg:text-xl">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
     <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 lg:pt-7 lg:px-2 mx-auto">
-      <Image src={wildtiger} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={wa} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={wave} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={sweetoliven} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={takeasip} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={goldentaste} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
-      <Image src={bobble} alt="billede" class="beer-image w-14 sm:w-20 lg:w-44" />
+      <Image src={wildtiger} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={wa} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={wave} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={sweetoliven} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={takeasip} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={goldentaste} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={bobble} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
     </div>
 
     <div class="relative z-20 flex justify-center pt-6">
@@ -81,8 +81,8 @@ import bg3 from "../assets/images/bg3.svg";
           <!-- Beerglass -->
           <div class="relative flex place-content-end pt-8">
             <Image src={beerglass1} alt="øl" class="w-56 md:w-96 h-auto md:pl-10" />
-            <div class="absolute right-[21%] top-[69%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[18%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gif} alt="GIF" class="w-6 sm:w-6 md:w-7 lg:w-8 h-auto" />
+            <div class="absolute right-[21%] top-[69%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[17%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gif} alt="GIF" class="w-6 sm:w-6 md:w-7 lg:w-9 h-auto" />
             </div>
           </div>
         </div>
@@ -225,6 +225,85 @@ import bg3 from "../assets/images/bg3.svg";
 </MainLayout>
 
 <style>
+  .image-container {
+    opacity: 0;
+    visibility: hidden;
+  }
+  .beer-img {
+    animation: rotateToRight 1s ease-in forwards;
+    animation-delay: 5s; /* Denne forsinkelse sikrer, at rotationen sker efter billedet er kommet på plads */
+  }
+
+  @keyframes slideInFromLeft {
+    from {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateX(-200vw) rotate(-90deg); /* Start udenfor skærmen til venstre */
+    }
+    to {
+      opacity: 1;
+      visibility: visible;
+      transform: translateX(0); /* Glider til sin normale position */
+    }
+  }
+
+  @keyframes rotateToRight {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(30deg); /* Roterer til højre */
+    }
+  }
+
+  /* Anvend animationen på billederne */
+  .slide-left {
+    animation: slideInFromLeft 1.5s ease-out forwards;
+  }
+
+  /* Forsinkelse for hvert billede, så de glider ind én ad gangen */
+  .beer-img:nth-child(1) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 1.4s, 2s; /* Glider først ind, derefter roterer */
+  }
+  .beer-img:nth-child(2) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 1.2s, 2.6s;
+  }
+  .beer-img:nth-child(3) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 1s, 3.2s;
+  }
+  .beer-img:nth-child(4) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 0.8s, 3.8s;
+  }
+  .beer-img:nth-child(5) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 0.6s, 4.4s;
+  }
+  .beer-img:nth-child(6) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 0.4s, 5s;
+  }
+  .beer-img:nth-child(7) {
+    animation:
+      slideInFromLeft 1.5s ease-out forwards,
+      rotateToRight 1s ease-in forwards;
+    animation-delay: 0.2s, 5.6s;
+  }
   @keyframes slide-in {
     0% {
       opacity: 0;
@@ -252,13 +331,13 @@ import bg3 from "../assets/images/bg3.svg";
   .custom-pulse {
     animation: pulseScale 2s infinite;
   }
-  .beer-image {
+  /* .beer-image {
     animation: slide-in 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
   }
 
   /* Forsinkelse for hver billede */
 
-  .beer-image:nth-child(1) {
+  /* .beer-image:nth-child(1) {
     animation-delay: 0.2s;
   }
   .beer-image:nth-child(2) {
@@ -278,7 +357,7 @@ import bg3 from "../assets/images/bg3.svg";
   }
   .beer-image:nth-child(7) {
     animation-delay: 1.4s;
-  }
+  } */
   html {
     scroll-behavior: smooth;
   }
@@ -350,18 +429,6 @@ import bg3 from "../assets/images/bg3.svg";
 
   observer.observe(bestsellerSection);
   observer.observe(fotobesImage);
-
-  window.onscroll = function () {
-    scrollFunction();
-  };
-
-  function scrollFunction() {
-    if (document.documentElement.scrollTop > 500) {
-      document.querySelector("#scroll_to_top").style.display = "block";
-    } else {
-      document.querySelector("#scroll_to_top").style.display = "none";
-    }
-  }
 
   document.querySelector("#scroll_to_top").addEventListener("click", scrollToTop);
   function scrollToTop() {
