--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,13 +33,13 @@ import bg3 from "../assets/images/bg3.svg";
     <h3 class="flex justify-center text-blue-500 text-sm font-bold lg:pt-4 lg:text-xl">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
     <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 lg:pt-7 lg:px-2 mx-auto">
-      <Image src={wildtiger} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={wa} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={wave} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={sweetoliven} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={takeasip} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={goldentaste} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
-      <Image src={bobble} alt="billede" class="image-container beer-img w-14 sm:w-20 lg:w-44 slide-left" />
+      <Image src={wildtiger} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={wa} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={wave} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={sweetoliven} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={takeasip} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={goldentaste} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
+      <Image src={bobble} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
     </div>
 
     <div class="relative z-20 flex justify-center pt-6">
@@ -333,7 +333,7 @@ import bg3 from "../assets/images/bg3.svg";
   }
   /* .beer-image {
     animation: slide-in 1.5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
-  }
+  } */
 
   /* Forsinkelse for hver billede */
 
