--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import logo from "../assets/images/logo.png";
 ---
 
-<section class="whitespace-nowrap overflow-x-hidden text-small bg-blue-500 text-grey-500 py-4">
+<section class="whitespace-nowrap overflow-x-hidden text-xs bg-blue-500 text-grey-500 py-2">
   <div class="inline-block animate-infinite-scroll whitespace-nowrap [&_span]:mx-6">
     <span>Fri fragt</span>
     <span>20% ved tilmelding af nyhedsbrev</span>
