--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -10,7 +10,7 @@ import klat from "../assets/images/klat.svg";
     <div class="relative">
       <Image src={klat} alt="klat" class="w-3/5 pt-8 sm:w-3/5 lg:pt-6 m-auto lg:w-3/6" />
       <div class="absolute top-0 left-0 right-0 bottom-0 flex justify-center items-center w-full h-full">
-        <h2 class="text-blue-500 lg:text-large pt-22 custom-pulse">DIN SMAGSREJSE STARTER HER</h2>
+        <h2 class="text-blue-500 lg:text-4xlarge md:text-2xlarge text-large pt-22 custom-pulse">DIN SMAGSREJSE STARTER HER</h2>
       </div>
     </div>
 
