--- a/src/pages/registering.astro
+++ b/src/pages/registering.astro
@@ -36,11 +36,11 @@ import beer from "../assets/images/4_beer.png";
     <div class="w-full max-w-sm md:max-w-5xl">
       <div class="flex">
         <div class="flex-1 text-center">
-          <h2 class="inline-block text-blue-500 md:text-3xl md:px-4">DIN BESTILLING</h2>
+          <h2 class="inline-block text-blue-500 md:text-large md:px-4">DIN BESTILLING</h2>
         </div>
 
         <div class="flex-1 text-center">
-          <h2 class="text-blue-500 inline-block md:text-3xl md:px-4">DINE OPLYSNINGER</h2>
+          <h2 class="text-blue-500 inline-block md:text-large md:px-4">DINE OPLYSNINGER</h2>
         </div>
       </div>
 
