--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -6,10 +6,10 @@ import Button from "../components/Button.astro";
 <article class="relative rounded cursor-pointer overflow-hidden w-[420px] h-[550px] shadow-drop50 mb-32">
   <div class="absolute inset-0 bg-rosa-500 transform transition duration-400 ease-in-out hover:scale-105">
     <div class="text-center">
-      <h3 class="text-medium pt-6 font-semibold text-blue-500">{navn}</h3>
+      <h3 class="text-small pt-6 font-semibold text-blue-500">{navn}</h3>
     </div>
     <div class="flex justify-center">
-      <p class="text-sm text-center text-blue-500">{pris}</p>
+      <p class="text-md font-light text-center text-blue-500">{pris}</p>
     </div>
 
     <div class="flex justify-center pb-4">
@@ -19,7 +19,7 @@ import Button from "../components/Button.astro";
       <p class="text-sm text-center font-normal text-blue-500 w-96">{tekst}</p>
     </div>
     <!-- Denne del tilføjer teksten med separator og stjerner -->
-    <div class="flex justify-center text-small text-grey-900 mt-4 font-light">
+    <div class="flex justify-center text-xs text-grey-900 mt-4 font-light">
       <p class="pr-1">Fri fragt inkluderet</p>
       <span class="px-1">|</span>
       <p class="pr-1">Månedligt abonnement</p>
