--- a/src/pages/betaling.astro
+++ b/src/pages/betaling.astro
@@ -40,11 +40,11 @@ import beer from "../assets/images/4_beer.png";
     <div class="w-full max-w-sm md:max-w-5xl">
       <div class="flex">
         <div class="flex-1 text-center">
-          <h2 class="inline-block text-blue-500 md:text-3xl md:px-4">DIN BESTILLING</h2>
+          <h2 class="inline-block text-blue-500 md:text-large md:px-4">DIN BESTILLING</h2>
         </div>
 
         <div class="flex-1 text-center">
-          <h2 class="text-blue-500 inline-block md:text-3xl md:px-4">BETALING</h2>
+          <h2 class="text-blue-500 inline-block md:text-large md:px-4">BETALING</h2>
         </div>
       </div>
 
@@ -86,8 +86,8 @@ import beer from "../assets/images/4_beer.png";
 
                 <div>
                   <input class="rounded-full" type="checkbox" id="tilmeld1" name="tilmeld1" value="nyhedsbrev" />
-                  <label class="text-small" for="tilmeld1"> TILMELD NYHEDSBREV</label><br />
-                  <p class="text-xsmall w-1/2">Ved at tilmelde dig vores nyhedsbrev accepterer du vores brugerbetingelser og privatlivspolitik. Du kan til enhver tid afmelde dig via linket i vores e-mails.</p>
+                  <label class="text-sm" for="tilmeld1"> TILMELD NYHEDSBREV</label><br />
+                  <p class="text-xs w-1/2">Ved at tilmelde dig vores nyhedsbrev accepterer du vores brugerbetingelser og privatlivspolitik. Du kan til enhver tid afmelde dig via linket i vores e-mails.</p>
                 </div>
                 <!-- Postnummer & By -->
 
