--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,8 @@ import bg3 from "../assets/images/bg3.svg";
 
 <MainLayout title="Maltclub">
   <section class="relative">
-    <h1 class="flex justify-center text-blue-500 text-large lg:text-xlarge inview2">MALTCLUB</h1>
-    <h3 class="flex justify-center text-blue-500 text-sm font-bold lg:pt-4 lg:text-xl">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
+    <h1 class="flex justify-center text-blue-500 text-xlarge md:text-3xlarge lg:text-5xlarge inview2">MALTCLUB</h1>
+    <h3 class="flex justify-center text-blue-500 font-bold lg:pt-4 text-xsmall">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
     <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 lg:pt-7 lg:px-2 mx-auto">
       <Image src={wildtiger} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
@@ -50,10 +50,10 @@ import bg3 from "../assets/images/bg3.svg";
   </section>
 
   <section class="pt-36 pb-36 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <h2 class="text-blue-500 pb-16 text-medium">BOKS ABONNEMENT</h2>
+    <h2 class="text-blue-500 pb-16 text-large md:text-2xl lg:text-4xlarge">BOKS ABONNEMENT</h2>
     <div class="lg:grid lg:grid-cols-[1fr_auto] gap-6">
       <div class="lg:w-4/5 lg:flex lg:flex-col lg:place-content-center">
-        <h3 class="text-4xl font-bold text-blue-500">GØR HVER MÅNED TIL EN SMAGSREJSE!</h3>
+        <h3 class="lg:text-small text-xsmall font-bold text-blue-500">GØR HVER MÅNED TIL EN SMAGSREJSE!</h3>
         <p class="text-blue-500 pt-7">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
         <p class="text-blue-500 pb-10 pt-4">Find din favorit i dag og gør hver måned til noget særligt!</p>
         <div class="pb-9">
@@ -89,7 +89,7 @@ import bg3 from "../assets/images/bg3.svg";
 
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
-          <h3 class="font-bold">Smag vores Nyhed!</h3>
+          <h3 class="font-bold md:text-small text-xsmall">Smag vores Nyhed!</h3>
           <p class="md:w-2/3">Vores yngste medlem. En alkoholfri tørslukker med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
@@ -100,7 +100,7 @@ import bg3 from "../assets/images/bg3.svg";
     <div class="relative">
       <Image src={klat} alt="billede" class="w-3/5 pt-32 sm:w-3/5 lg:pt-10 m-auto lg:w-3/5" />
       <div class="absolute top-0 left-0 right-0 bottom-0 flex flex-col justify-center items-center w-full h-full">
-        <h2 class="text-blue-500 lg:text-large pt-22 custom-pulse">DINE FORDELE</h2>
+        <h2 class="text-blue-500 lg:text-4xlarge md:text-2xlarge text-large pt-22 custom-pulse">DINE FORDELE</h2>
         <h2 class="text-blue-500">VED ET MALTCLUB ABONNEMENT</h2>
       </div>
     </div>
@@ -108,25 +108,25 @@ import bg3 from "../assets/images/bg3.svg";
     <div class="mx-auto max-w-sm place-content-center md:grid md:grid-cols-[auto_auto] md:grid-rows-4">
       <div class="pt-28 md:pl-16 md:col-start-1 md:row-start-1 fotoinview">
         <Image src={info1} alt="billede" class="w-60" />
-        <h3 class="text-xl font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
         <p class="text-blue-500 w-96 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
       </div>
 
       <div class="pt-10 md:pl-16 md:col-start-2 md:row-start-2 inview">
         <Image src={info2} alt="billede" class="w-60" />
-        <h3 class="text-xl font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
         <p class="text-blue-500 w-96 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
       </div>
 
       <div class="pt-10 md:pl-16 md:col-start-1 md:row-start-3 fotoinview3">
         <Image src={info3} alt="billede" class="w-24" />
-        <h3 class="text-xl font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
         <p class="text-blue-500 w-96 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
       </div>
 
       <div class="pt-10 md:pl-16 md:col-start-2 md:row-start-4 inview4">
         <Image src={info4} alt="billede" class="w-36" />
-        <h3 class="text-xl font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
+        <h3 class="text-xsmall font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
         <p class="text-blue-500 w-96 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
       </div>
     </div>
@@ -138,7 +138,7 @@ import bg3 from "../assets/images/bg3.svg";
       <div class="max-w-screen-lg mx-auto flex flex-col items-center gap-10 px-4">
         <!-- Tekst (i række) -->
         <div class="flex flex-col lg:flex-row justify-center items-center lg:items-start text-center lg:text-left gap-10">
-          <h3 class="text-4xl font-bold text-blue-500">
+          <h3 class="lg:text-medium md:text-small text-small font-bold text-blue-500">
             FLEKSIBILITET PÅ <br /> DINE PRÆMISSER
           </h3>
           <p class="lg:w-2/5 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
@@ -175,7 +175,7 @@ import bg3 from "../assets/images/bg3.svg";
 
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
-          <h3 class="font-bold">GOLDEN TASTE</h3>
+          <h3 class="font-bold md:text-small text-xsmall">GOLDEN TASTE</h3>
           <p class="md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
@@ -186,7 +186,7 @@ import bg3 from "../assets/images/bg3.svg";
     <Image src={car} alt="Baggrund" class="w-52 pt-36 lg:w-auto bilinview" />
 
     <div class="bg-rosa-500 py-32 pl-4">
-      <h2 class="text-blue-500 text-large lg:flex lg:justify-center">VI LEVERER DIN ORDRE</h2>
+      <h2 class="text-blue-500 lg:text-4xlarge md:text-2xlarge text-large lg:flex lg:justify-center">VI LEVERER DIN ORDRE</h2>
       <div class="lg:flex lg:justify-center">
         <p class="text-blue-500 lg:w-3/6 pt-4 lg:m-auto">Læn dig tilbage - vi leverer dine øl fra MaltClub i starten af hver måned. Øllene leveres direkte hjem til dig eller til nærmeste pakkeshop - det kunne ikke være lettere!</p>
       </div>
@@ -198,7 +198,7 @@ import bg3 from "../assets/images/bg3.svg";
   </section>
 
   <section class="bg-blue-500 py-28">
-    <h3 class="text-grey-500 text-4xl flex justify-center pl-7">Tilmeld dig vores nyhedsbrev og spar 20% på første måned</h3>
+    <h3 class="text-grey-500 flex justify-center pl-7 lg:text-medium md:text-small text-xsmall">Tilmeld dig vores nyhedsbrev og spar 20% på første måned</h3>
     <p class="flex justify-center text-grey-500 pt-4 pl-7">Hop med på bølgen og start dit øl-eventyr med 20% rabat i første måned!</p>
 
     <form class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto pt-4">
@@ -207,11 +207,11 @@ import bg3 from "../assets/images/bg3.svg";
     </form>
   </section>
   <section id="bestseller" class="lg:px-2 max-w-screen-xl mx-auto pb-36 pl-4 transform rotate-15 transition-all duration-700">
-    <h2 class="text-large pt-36 pb-14">BESTSELLER</h2>
+    <h2 class="lg:text-4xlarge md:text-3xlarge text-large pt-36 pb-14">BESTSELLER</h2>
     <div class="lg:flex lg:justify-center">
       <Image src={sweetoliven} alt="Baggrund" class="w-36 rotate-15 lg:w-56" id="fotobes" />
       <div class="pt-10 lg:w-2/4 lg:pt-72 lg:pl-32">
-        <h2 class="text-medium">SWEET OLIVE</h2>
+        <h2 class="lg:text-3xlarge text-large">SWEET OLIVE</h2>
         <p>Nyd vores organiske bestseller - en harmonisk balance af friske noter og uventede smagsnuancer - en ægte smagsoplevelse i hvert glas.</p>
         <p>Denne bestseller er altid med i vores abonnementer, så ligegyldigt hvilken pakke du køber, vil du altid kunne nyde denne lækre øl.</p>
       </div>
