--- a/src/pages/om_os.astro
+++ b/src/pages/om_os.astro
@@ -18,8 +18,8 @@ import insta6 from "../assets/images/insta6.svg";
   <section class="pb-20 lg:relative lg:bg-cover lg:h-screen lg:top-[-4.5rem]" style="background-image: url('/about_us.svg');  z-0">
     <div class="lg:absolute inset-0 z-10 lg:flex lg:items-center lg:justify-center">
       <div class="text-white space-y-4 lg:pb-28 inview">
-        <h1 class="lg:text-5xl text-medium text-blue-500 px-4 pt-4">MALTCLUB</h1>
-        <h2 class="lg:text-8xl text-blue-500 text-medium px-4">HVEM ER VI?</h2>
+        <h1 class="lg:text-xlarge text-xlarge text-blue-500 px-4 pt-4">MALTCLUB</h1>
+        <h2 class="lg:text-4xlarge text-blue-500 text-2xlarge px-4">HVEM ER VI?</h2>
         <p class="text-blue-500 lg:w-2/3 px-4">Uanset om du er nybegynder eller ølentusiast, sørger Maltclub for at overraske og forkæle dine smagsløg.</p>
         <div class="lg:relative lg:z-20 lg:pt-7 pt-7 px-4">
           <Button variant="primary" size="medium" href="#omos">LÆS MERE</Button>
@@ -36,7 +36,7 @@ import insta6 from "../assets/images/insta6.svg";
         </div>
 
         <div class="pt-10 max-w-s text-blue-500 space-y-4 lg:max-w-lg lg:mx-auto">
-          <h2 class="text-3xl font-bold text-blue-500">MALTCLUB</h2>
+          <h2 class="text-large font-bold text-blue-500">MALTCLUB</h2>
           <p>Hos MaltClub er vi på en mission. Vi vil udbrede kendskabet til god øl fra bryghuse med noget på hjertet. Vi elsker at fortælle den gode historie om både øl og bryghuse fra ind- og udland og er overbeviste om, at dette kan være med til at pirre dine smagsløg. Øl med en god historie smager bedre.</p>
           <p>Vi sammensætter hver måned en kasse med forskellige typer øl og håber på den måde at kunne medvirke til at udvide din horisont omkring øl. Hver øl akkompagneres med en inspirerende beskrivelse af bryghuset og historien bag den udvalgte øl. Vi glæder os til at levere din næste MaltClub ølpakke!</p>
         </div>
@@ -45,7 +45,7 @@ import insta6 from "../assets/images/insta6.svg";
 
     <section class="px-4 pt-10 pb-28 sm:px-4 md:px-6 md:h-auto lg:pb-28 max-w-screen-xl mx-auto">
       <div class="flex justify-center flex-col items-center pb-8">
-        <h3 class="font-bold">FØLG OS PÅ INSTAGRAM</h3>
+        <h3 class="font-bold lg:text-small text-xsmall">FØLG OS PÅ INSTAGRAM</h3>
         <Link><a class="hover:text-orange-500" href="https://www.instagram.com/maltclub.dk/">@maltclub.dk</a></Link>
       </div>
       <div class="w-32 md:w-56 gap-7 flex justify-center mx-auto lg:gap-8 lg:w-72">
