rette store bogstaver

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ import beerglass1 from "../assets/images/beer_glass1.svg";
 import beerglass2 from "../assets/images/beer_glass2.svg";
 import background_image1 from "../assets/images/background_image1.svg";
 import background2 from "../assets/images/background_image2.svg";
-import info1 from "../assets/images/info1.svg";
-import info2 from "../assets/images/info2.svg";
-import info3 from "../assets/images/info3.svg";
-import info4 from "../assets/images/info4.svg";
+import info1 from "../assets/images/INFO1.svg";
+import info2 from "../assets/images/INFO2.svg";
+import info3 from "../assets/images/INFO3.svg";
+import info4 from "../assets/images/INFO4.svg";
 import car from "../assets/images/beer_car.png";
 import klat from "../assets/images/klat.svg";
 import gif from "../assets/images/bubbles.gif";
