--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
 <section class="bg-blue-500 py-20 sm:py-24 md:py-28 lg:py-36 text-grey-500">
-  <div class="grid grid-cols-3 text-xs sm:text-sm lg:text-base px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+  <div class="md:grid md:grid-cols-3 text-xs sm:text-sm lg:text-base px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
     <div class="lg:pb-6">
       <p>Om os</p>
       <p>Kontakt</p>
       <p>FAQ</p>
     </div>
 
-    <div class=":pb-6 lg:flex lg:justify-center">
-      <div class="text-left">
+    <div class="md:pb-6 lg:flex lg:justify-center">
+      <div class="md:text-left">
         <p>Handelsbetingelser</p>
         <p>Cookie- og privatlivspolitik</p>
         <p>Persondatapolitik</p>
@@ -15,8 +15,8 @@
       </div>
     </div>
 
-    <div class="pb-6 lg:place-items-end">
-      <div class="text-right">
+    <div class="md:pb-6 lg:place-items-end">
+      <div class="pt-5 md:text-right">
         <p>© 2024, Maltclub</p>
         <p>Din månedlige leverandør af kvalitetsøl</p>
         <p>Sikker handel</p>
