--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,7 +57,7 @@ import logo from "../assets/images/logo.png";
     </button>
   </div>
 
-  <nav id="mobilmenu" class="fixed right-0 w-full flex flex-col items-center pb-4 pt-4 bg-white lg:hidden" x-show="showmenu" x-transition x-cloak>
+  <nav id="mobilmenu" class="fixed right-0 w-full flex flex-col items-center pb-4 pt-4 bg-white lg:hidden z-30" x-show="showmenu" x-transition x-cloak>
     <ul class="text-center text-blue-500 space-y-4">
       <li class="hover:opacity-75"><a href="/abonnement">VORES ABONNEMENTER</a></li>
       <li class="hover:opacity-75"><a href="/om_os">OM OS</a></li>
