--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
       <Header />
     </header>
 
-    <main class="p-sm">
+    <main class="p-sm overflow-hidden">
       <slot />
     </main>
 
