--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <section class="bg-blue-500 py-20 sm:py-24 md:py-28 lg:py-36 text-grey-500">
   <div class="md:grid md:grid-cols-3 text-xs sm:text-sm lg:text-base px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <div class="lg:pb-6">
+    <div class="pb-6">
       <p>Om os</p>
       <p>Kontakt</p>
       <p>FAQ</p>
