--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,26 +117,26 @@ import bg3 from "../assets/images/bg3.svg";
       </div>
     </div>
 
-    <div class="mx-auto md:grid md:grid-cols-2 lg:grid-cols-4 gap-8 pt-7 md:pt-20">
-      <div class="w-72 min-h-full flex flex-col items-center p-4">
+    <div class="md:grid md:grid-cols-2 lg:grid-cols-4 gap-8 pt-7 md:pt-20">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
         <Image src={info1} alt="billede" class="w-28 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
         <p class="text-blue-500 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col items-center p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
         <Image src={info2} alt="billede" class="w-32 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
         <p class="text-blue-500 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col items-center p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-center p-4">
         <Image src={info3} alt="billede" class="w-20 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
         <p class="text-blue-500 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
       </div>
 
-      <div class="w-72 min-h-full flex flex-col items-left p-4">
+      <div class="w-72 min-h-full flex flex-col mx-auto items-left p-4">
         <Image src={info4} alt="billede" class="w-20 h-24 mx-auto" />
         <h3 class="text-xsmall font-bold text-blue-500 pt-4 text-left">SPAR TID OG PENGE</h3>
         <p class="text-blue-500 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
