--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -8,9 +8,9 @@ import klat from "../assets/images/klat.svg";
 <MainLayout title="Maltclub">
   <section class="">
     <div class="relative">
-      <Image src={klat} alt="klat" class="w-3/5 pt-8 sm:w-3/5 lg:pt-6 m-auto lg:w-3/6" />
+      <Image src={klat} alt="klat" class="w-3/5 pt-8 sm:w-3/5 lg:pt-6 m-auto lg:w-2/6" />
       <div class="absolute top-0 left-0 right-0 bottom-0 flex justify-center items-center w-full h-full">
-        <h2 class="text-blue-500 lg:text-4xlarge md:text-2xlarge text-large pt-22 custom-pulse">DIN SMAGSREJSE STARTER HER</h2>
+        <h2 class="text-blue-500 lg:text-2xlarge md:text-2xlarge text-small pt-22">DIN SMAGSREJSE STARTER HER</h2>
       </div>
     </div>
 
