--- a/src/pages/om_os.astro
+++ b/src/pages/om_os.astro
@@ -15,7 +15,7 @@ import insta6 from "../assets/images/insta6.svg";
 ---
 
 <MainLayout title="Maltclub">
-  <section class="pb-20 lg:relative lg:bg-cover lg:h-screen lg:top-[-4.5rem]" style="background-image: url('/about_us.svg');  z-0">
+  <section class="pb-20 lg:relative lg:bg-cover lg:h-screen lg:top-[-4.5rem]" style="background-image: url('/about_us.svg'); ">
     <div class="lg:absolute inset-0 z-10 lg:flex lg:items-center lg:justify-center">
       <div class="text-white space-y-4 lg:pb-28 inview">
         <h1 class="lg:text-xlarge text-xlarge text-blue-500 px-4 pt-4">MALTCLUB</h1>
@@ -31,7 +31,7 @@ import insta6 from "../assets/images/insta6.svg";
   <div class="bg-rosa-500" id="omos">
     <section class="px-4 lg:h-screen lg:flex lg:place-items-center lg:justify-center">
       <div class="md:grid md:grid-cols-[auto_auto] md:place-content-center md:max-w-screen-lg md:px-6 md:gap-10 md:w-full md:h-screen lg:grid lg:grid-cols-[auto_auto] lg:place-content-center lg:max-w-screen-xl lg:gap-20 lg:w-full">
-        <div class="w-40 md:w-60 tpt-10 lg:w-96">
+        <div class="w-40 md:w-60 pt-10 lg:w-96">
           <Image src={beer_about} alt="Billede af øl" />
         </div>
 
@@ -43,17 +43,17 @@ import insta6 from "../assets/images/insta6.svg";
       </div>
     </section>
 
-    <section class="px-4 pt-10 pb-28 sm:px-4 md:px-6 md:h-auto lg:pb-28 max-w-screen-xl mx-auto">
+    <section class="px-4 pt-4 pb-20 sm:px-4 md:px-6 md:h-auto lg:pb-28 max-w-screen-xl mx-auto">
       <div class="flex justify-center flex-col items-center pb-8">
-        <h3 class="font-bold lg:text-small text-xsmall">FØLG OS PÅ INSTAGRAM</h3>
+        <h3 class="font-bold lg:text-small text-xsmall pt-8">FØLG OS PÅ INSTAGRAM</h3>
         <Link><a class="hover:text-orange-500" href="https://www.instagram.com/maltclub.dk/">@maltclub.dk</a></Link>
       </div>
-      <div class="w-32 md:w-56 gap-7 flex justify-center mx-auto lg:gap-8 lg:w-72">
+      <div class="w-24 md:w-56 gap-7 flex justify-center mx-auto lg:gap-8 lg:w-72">
         <Image src={insta1} alt="" class="" />
         <Image src={insta2} alt="" class="" />
         <Image src={insta3} alt="" class="" />
       </div>
-      <div class="w-32 md:w-56 gap-7 flex pt-8 justify-center mx-auto lg:gap-8 lg:w-72">
+      <div class="w-24 md:w-56 gap-7 flex pt-8 justify-center mx-auto lg:gap-8 lg:w-72">
         <Image src={insta4} alt="" class="" />
         <Image src={insta5} alt="" class="" />
         <Image src={insta6} alt="" class="" />
