--- a/src/pages/registering.astro
+++ b/src/pages/registering.astro
@@ -32,15 +32,15 @@ import beer from "../assets/images/4_beer.png";
     </ul>
   </div>
 
-  <div class="flex justify-center md:items-start pt-20">
+  <div class="flex justify-center md:items-start md:pt-20">
     <div class="w-full max-w-sm md:max-w-5xl">
       <div class="flex">
         <div class="flex-1 text-center">
-          <h2 class="inline-block text-blue-500 md:text-large md:px-4">DIN BESTILLING</h2>
+          <h2 class="text-blue-500 invisible sm:visible md:text-large lg:text-large md:px-4">DIN BESTILLING</h2>
         </div>
 
         <div class="flex-1 text-center">
-          <h2 class="text-blue-500 inline-block md:text-large md:px-4">DINE OPLYSNINGER</h2>
+          <h2 class="text-blue-500 invisible sm:visible md:text-large md:px-4">DINE OPLYSNINGER</h2>
         </div>
       </div>
 
@@ -84,7 +84,7 @@ import beer from "../assets/images/4_beer.png";
                   <input type="text" placeholder="BY" class="w-1/2 border-1 border-blue-500 rounded-full p-2 text-sm focus:outline-none focus:ring-1 focus:ring-gray-700" />
                 </div>
                 <!-- Submit knap -->
-                <div class="flex items-center">
+                <div class="flex items-center pb-6 pt-4">
                   <Button variant="primary" size="large" href="/betaling">FORTSÆT TIL BETALING</Button>
                 </div>
               </form>
