--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ import logo from "../assets/images/logo.png";
     </div>
     <nav id="desktopmenu" class="hidden font-display lg:flex flex-1 justify-end text-lg">
       <ul class="flex flex-row gap-8 pr-8">
-        <li class="hover:opacity-50 text-blue-500"><a href="/abonnement">VORES ABONNEMENTER</a></li>
+        <li class="hover:opacity-50 text-blue-500"><a href="/abonnement">ABONNEMENTER</a></li>
         <li class="hover:opacity-50 text-blue-500"><a href="/om_os">OM OS</a></li>
       </ul>
       <div>
