--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,8 +89,8 @@ import bg3 from "../assets/images/bg3.svg";
 
         <!-- Tekst -->
         <div class="w-1/2 md:w-[41%] pt-28 md:pt-14">
-          <h3 class="font-bold md:text-small text-xsmall">Smag vores Nyhed!</h3>
-          <p class="w-44 md:w-2/3 text-xs md:text-body">Vores yngste medlem. En alkoholfri tørslukker med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
+          <h3 class="font-bold md:text-small text-xsmall">Smag vores nyhed!</h3>
+          <p class="w-44 md:w-2/3 text-xs md:text-body">Vores nyeste medlem i klubben. En alkoholfri specialøl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
     </div>
