--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,9 @@ import bg3 from "../assets/images/bg3.svg";
 <MainLayout title="Maltclub">
   <section class="relative">
     <h1 class="flex justify-center text-blue-500 text-xlarge md:text-3xlarge lg:text-5xlarge inview2">MALTCLUB</h1>
-    <h3 class="flex justify-center text-blue-500 font-bold lg:pt-4 text-xsmall">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
+    <h3 class="flex justify-center text-blue-500 font-bold pt-2 lg:pt-4 text-xsmall">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
-    <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 lg:pt-7 lg:px-2 mx-auto">
+    <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 pt-4 lg:pt-7 lg:px-2 mx-auto">
       <Image src={wildtiger} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
       <Image src={wa} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
       <Image src={wave} alt="billede" class="image-container beer-image w-14 sm:w-20 lg:w-44 slide-left beer-img" />
@@ -90,7 +90,7 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Tekst -->
         <div class="w-1/2 md:w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold md:text-small text-xsmall">Smag vores nyhed!</h3>
-          <p class="w-44 md:w-2/3 text-xs md:text-body">Vores nyeste medlem i klubben. En alkoholfri specialøl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
+          <p class="w-44 md:w-2/3 pt-2 text-xs md:text-body">Vores nyeste medlem i klubben. En alkoholfri specialøl med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
     </div>
@@ -184,7 +184,7 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold md:text-small text-xsmall">GOLDEN TASTE</h3>
-          <p class="text-xs w-64 md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <p class="text-xs md:text-xsmall pt-2 w-64 md:w-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
