--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,8 +8,8 @@ const variantClasses = {
 
 const sizeClasses = {
   large: "w-full px-30 text-center py-2 text-sm md:text-base md:py-3 md:px-32",
-  medium: "px-4 py-4 text-xs",
-  small: "px-2 py-0.5 text-xxs",
+  medium: "px-1 py-2 text-xs md:px-4 md:py-4 md:text-xs",
+  small: "px-1 py-0.5 text-xxs",
 };
 ---
 
