--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,10 +67,10 @@ import bg3 from "../assets/images/bg3.svg";
     </div>
   </section>
 
-  <section class="relative min-h-full md:min-h-screen flex flex-wrap overflow-hidden">
+  <section class="relative h-screen md:min-h-screen flex flex-wrap overflow-hidden">
     <!-- Baggrund -->
     <div class="absolute z-1 inset-0 object-cover">
-      <Image src={bg2} alt="Baggrund" class="w-full h-full object-cover object-center" />
+      <Image src={bg2} alt="Baggrund" class="max-w-fit h-full md:w-full object-cover object-center" />
     </div>
 
     <!-- Indhold -->
@@ -79,9 +79,9 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Billede og GIF -->
         <div class="w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
-          <div class="relative flex place-content-end pt-8">
+          <div class="relative flex place-content-end pt-20 md:pt-8">
             <Image src={beerglass1} alt="øl" class="w-52 md:w-96 h-auto md:pl-10" />
-            <div class="absolute right-[21%] top-[70%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[17%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+            <div class="absolute right-[22%] top-[74%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[17%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
               <Image src={gif} alt="GIF" class="w-4 sm:w-7 md:w-7 lg:w-9 h-auto" />
             </div>
           </div>
@@ -161,10 +161,10 @@ import bg3 from "../assets/images/bg3.svg";
     </div>
   </section>
 
-  <section class="relative min-h-screen md:min-h-screen flex flex-wrap overflow-hidden">
+  <section class="relative min-h-screen flex flex-wrap overflow-hidden">
     <!-- Baggrund -->
     <div class="absolute z-1 inset-0 object-cover">
-      <Image src={bg3} alt="Baggrund" class="w-full h-full object-cover object-left" />
+      <Image src={bg3} alt="Baggrund" class="w-full h-full object-cover md:object-center object-left" />
     </div>
 
     <!-- Indhold -->
@@ -184,7 +184,7 @@ import bg3 from "../assets/images/bg3.svg";
         <!-- Tekst -->
         <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold md:text-small text-xsmall">GOLDEN TASTE</h3>
-          <p class="text-xs w-64 md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <p class="text-xs w-44 md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
